[PlayStation] Fix build break since r244919 https://bugs.webkit.org/show_bug.cgi?id=197627

Reviewed by Ross Kirsling.

Bugfix for POSIX socket implementation and suppress warnings.

* inspector/remote/socket/RemoteInspectorConnectionClient.h:
(Inspector::RemoteInspectorConnectionClient::didAccept):
* inspector/remote/socket/posix/RemoteInspectorSocketPOSIX.cpp:
(Inspector::Socket::getPort):


Canonical link: https://commits.webkit.org/211771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244986 268f45cc-cd09-0410-ab3c-d52691b4dbfc